--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
   		<!-- SITE TITLE -->
-		<title>Rancike Learning</title>
+		<title>Rancike Learnings</title>
 
 		<!-- FAVICON AND TOUCH ICONS -->
 		<!-- <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
