--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 								directly enrolled in our 5 session course.
 								<br><br>Signin now to get the course worth ₹199 for FREE.
 							</p>
-							<button type="button" class="btn btn-primary btn-lg" id="download-button" href="rancike-document.pdf" name="button"><a href="rancike-document.pdf" target="_blank"  download="GFG">Download Brochure</a></button>
+							<button type="button" class="btn btn-primary btn-lg" id="download-button" href="rancike-document.pdf" name="button"><a href="rancike-document.pdf" target="_blank"  download="Brochure">Download Brochure</a></button>
 							<!-- List -->
 							<!-- <ol class="num-list">
 															<li><p class="p-md">Laoreet augue an egestas feugiat primis undo etiam</p></li>
